--- a/tarbalho 1/index.html
+++ b/tarbalho 1/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header-mobile">
         <img src="./noticias/assets/images/logo.svg" alt="Logo do site de noticias w">
         <button>
             <img src="./noticias/assets/images/icon-menu.svg" alt="icone do menu">
         </button>
     </header>
     <main>
-        <section>
+        <section class="primeira-secao">
             <img src="./noticias/assets/images/image-web-3-mobile.jpg" alt="imagem de quebra cabeça">
 
             <h1>O futuro brilhante da Web 3.0?</h1>
@@ -22,7 +25,7 @@
             <button>Ler mais</button>
         </section>
 
-        <section>
+        <section class="segunda-secao">
 
             <h2>Novo</h2>
 
@@ -43,7 +46,7 @@
 
         </section>
 
-        <section>
+        <section class="terceira-secao">
             <div>
                 <img src="./noticias/assets/images/image-retro-pcs.jpg" alt="">
                 <div>
