--- a/tarbalho 1/index.html
+++ b/tarbalho 1/index.html
@@ -15,6 +15,17 @@
         <button>
             <img src="./noticias/assets/images/icon-menu.svg" alt="icone do menu">
         </button>
+        <nav>
+            <button>
+                <img src="./noticias/assets/images/icon-menu-close.svg" alt="">
+            </button>
+
+            <a href="">Home</a>
+            <a href="">Novo</a>
+            <a href="">Popular</a>
+            <a href="">Trending</a>
+            <a href="">Categoria</a>
+        </nav>
     </header>
     <main>
         <section class="primeira-secao">
