--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculadora de Gorjeta</title>
 </head>
 <body>
@@ -9,56 +10,49 @@
         <img src="./images/logo.svg" alt="logo do spliter">
     </header>
     <main>
-
         <section class="informacoes">
             <form action="">
                 <div class="conta">
                     <label for="conta">Conta</label>
                     <div>
                         <img src="./images/icon-dollar.svg" alt="icone do cifrão">
-                        <input type="number" name="conta" id="conta">
                         <input type="number" name="conta" id="conta" placeholder="0">
                     </div>
                 </div>
                 <div class="gorjeta">
-@@ -28,20 +29,40 @@
+                    <label for="outra">Selecione a gorjeta %</label>
+                    <div>
+                        <input type="button" value="5%">
+                        <input type="button" value="10%">
                         <input type="button" value="15%">
                         <input type="button" value="25%">
                         <input type="button" value="50%">
-                        <input type="number" name="outra" id="outra">
                         <input type="number" name="outra" id="outra" placeholder="Outra">
                     </div>
                 </div>
-
                 <div class="pessoas">
-                    <label for="conta">Numero de pessoas</label>
                     <label for="pessoas">Numero de pessoas</label>
                     <p>Não pode ser zero</p>
                     <div>
                         <img src="./images/icon-person.svg" alt="icone da pessoa">
-                        <input type="number" name="conta" id="conta">
                         <input type="number" name="pessoas" id="pessoas" placeholder="0">
                     </div>
                 </div>
             </form>
         </section>
-
         <section class="resultados">
             <div class="gorjeta-total">
                 <p>
                     <strong>Gorjeta</strong> <br>
                     / pessoa
                 </p>
-
                 <strong>$ 0.00</strong>
             </div>
-
             <div class="total">
                 <p>
                     <strong>Total</strong> <br>
                     / pessoa
                 </p>
-
                 <strong>$ 0.00</strong>
             </div>
         </section>
