quarto commit do CSS

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                     </div>
                 </div>
                 <div class="pessoas">
+                    <label for="pessoas">Quantidade de pessoas</label>
+                    <p id="erro">Não pode ser zero</p>
                     <label for="pessoas">Numero de pessoas</label>
                     <p>Não pode ser zero</p>
                     <div>
